--- a/src/components/MainComponent.css
+++ b/src/components/MainComponent.css
@@ -1,28 +1,37 @@
-.main-div{
-    height: 40vh;
-    margin: 10px;
-    background-color: rgb(22, 22, 112);
-    color: white;
-    display: flex;
-    justify-content: end;
-    flex-direction: column;
+.main-div {
+  height: 40vh;
+  margin: 10px;
+  background-color: rgb(22, 22, 112);
+  color: white;
+  display: flex;
+  justify-content: end;
+  flex-direction: column;
 }
-.form-div{
-    display: flex;
-    justify-content: center;
-    margin: 30px;
+.form-div {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
 }
-p{
-    margin: 10px;
+p {
+  margin: 10px;
 }
-p{
-    margin: 10px;
+p {
+  margin: 10px;
 }
-.create-trip-button{
-    width: 300px;
-    height: 40px;
-    background: #f26a47;
-    color: white;
-    border: none;
-  
+.create-trip-button {
+  width: 300px;
+  height: 40px;
+  background: #f26a47;
+  color: white;
+  border: none;
+}
+.admin-button {
+  width: 200px;
+  height: 40px;
+  background: #f26a47;
+  color: white;
+  border: none;
+  position: absolute;
+  right: 30px;
+  top: 25px;
 }
