--- a/src/components/admin/Admin.css
+++ b/src/components/admin/Admin.css
@@ -5,8 +5,9 @@
   height: 100vh;
 }
 .travel-list {
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  /* grid-gap: 20px; */
 }
 .admin-panel {
 }
