--- a/src/components/common/Card.css
+++ b/src/components/common/Card.css
@@ -15,7 +15,7 @@
 
 .card-text {
   margin-top: 10px;
-  color: red;
+  color: rgba(75, 59, 8, 0.61);
   margin-left: 10px;
 }
 .card-data {
@@ -23,4 +23,10 @@
   padding: 5px;
   justify-content: flex-start;
   align-items: baseline;
+}
+.delete-button {
+  border: none;
+  background: grey;
+  color: white;
+  cursor: pointer;
 }
